fix: api 작동 완료